# game

./: CMakeLists.txt  main.cpp
engine/: configfile.cpp  configfile.h  engine.cpp  engine.h  mapimporter.h  mathutils.h  metatexture.cpp  metatexture.h  stringutils.cpp  tilemap.cpp  tilemap.h
engine/collision/: collision.cpp  collision.h
engine/entity/: entity.cpp  entity.h  entitycontext.cpp  entitycontext.h  sprite.cpp  sprite.h
engine/extra/: stringutils.h
engine/io/: configfile.h  logger.cpp  logger.h
engine/map/: tile.h  tilemap.cpp  tilemap.h
engine/render/: binpack.cpp  binpack.h  metatexture.cpp  metatexture.h  sprite.cpp  sprite.h
game/: main.conf  maptest.conf
